--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.0",
     "path": "^0.12.7"
   }
