--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.8.1"
   }
 }
