--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "browserify script.js -o public/bundle.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "browserify": "^17.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.8.0",
-    "path": "^0.12.7",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "path": "^0.12.7"
   }
 }
